--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,5 +1,6 @@
 name: Deploy Project
-on: push
+#  add multiple event triggers
+on: [push, workflow_dispatch]
 jobs:
   test:
     runs-on: ubuntu-latest
