Revert "adding dependancy for the tests to finish before deploying"
This reverts commit 90e40de3a848583eb8db8e2e11589677ba5eba74.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,6 +1,5 @@
 name: Deploy Project
-#  add multiple event triggers
-on: [push, workflow_dispatch]
+on: push
 jobs:
   test:
     runs-on: ubuntu-latest
