--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -4,5 +4,5 @@ jobs:
   info:
     runs-on: ubuntu-latest
     steps:
-      - name: output github context
-        run: echo "{{ toJson(github) }}"
+      - name: Output GitHub context
+        run: echo "${{ toJSON(github) }}"
